testsuite/poke.pkl/predecr-diag-2.pk
/* { dg-do compile } */

--[1,2,3]; /* { dg-error "invalid operand" } */
